# claw-bots-for-reo

./: .env.example  .gitignore  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  manifest.json  pyproject.toml
docs/: api-exploration.md  sample-digest.md
docs/samples/: live_integration_2026-04-16.json  segment_accounts_sample.json  web3_allowlist_seed.txt
scripts/: live_integration.py  smoke_test.py
workspace/: AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
workspace/projects/: README.md
workspace/projects/reo_mcp/: __init__.py  reo_client.py  requirements.txt  server.py  web3_domains.py
workspace/projects/reo_mcp/tests/: conftest.py  test_contacts.py  test_ranking.py  test_reo_client.py  test_web3_filter.py
workspace/projects/reo_mcp/tools/: __init__.py  activity.py  contacts.py
